[project]
name = "docker-vol-backup"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "J Stuff", email = "jstuff@j-stuff.net"},
]
dependencies = [
    "schedule>=1.2.2",
    "docker>=7.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GNUGPL-3"}


[tool.pdm]
distribution = false
